[package]
name = "violence_governance_core"
version = "0.1.0"
edition = "2021"

[lib]
name = "violence_governance_core"
crate-type = ["cdylib"]

[dependencies]
pyo3 = { version = "0.18.0", features = ["extension-module"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
reqwest = { version = "0.11", features = ["json", "blocking"] }
url = "2.2"